[metadata]
name = <package-name>
version = <version number: 0.0.0>
license = <license name, e.g. MIT>
description = <A short description>
long_description = file: README.rst
author = Tom White
author_email = tom.e.white@gmail.com
classifiers=
     Development Status :: 3 - Alpha
     Intended Audience :: Developers
     Intended Audience :: Information Technology
     Intended Audience :: Science/Research
     License :: OSI Approved :: Apache Software License
     Operating System :: OS Independent
     Programming Language :: Python :: 3
     Programming Language :: Python :: 3.7
     Programming Language :: Python :: 3.8

[options]
packages = find:
package_dir =
    =src
include_package_data = True
install_requires =
   dask[array]
   psutil
   git+https://github.com/pangeo-data/rechunker
   git+https://github.com/lithops-cloud/lithops

[options.packages.find]
where=src