[metadata]
name = dask-executor-scheduler

long_description = file: README.rst
author = Tom White
author_email = tom.e.white@gmail.com
url = https://github.com/tomwhite/dask-executor-scheduler
classifiers=
     Development Status :: 3 - Alpha
     Intended Audience :: Developers
     Intended Audience :: Information Technology
     Intended Audience :: Science/Research
     License :: OSI Approved :: Apache Software License
     Operating System :: OS Independent
     Programming Language :: Python :: 3
     Programming Language :: Python :: 3.7
     Programming Language :: Python :: 3.8

[options]
packages = find:

include_package_data = True
install_requires =
   dask[array]
   psutil

